--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<a href="game/game.html">Play</a>
+# TCG-Cookies
+A Cookie Clicker client where cracked save codes are posted and you can play without it being blocked at school or work!
+
+<a href="game/game.html">Play Now</a>
+<a href="save.html">Save Codes</a>
