--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<title>TCG Cookies</title>
+<link rel="icon" type="image/x-icon" href="/favicon.png">
 <h2>TCG Cookies</h2>
 <h1>A Cookie Clicker client where cracked save codes are posted and you can play without it being blocked at school or work!</h1>
 
