--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
-<title>TCG Cookies</title>
-<link rel="icon" type="image/x-icon" href="/favicon.png">
-<h1>TCG Cookies</h1>
-<h3>A Cookie Clicker client where cracked save codes are posted and you can play without it being blocked at school or work!</h3>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>TCG Cookies</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.png">
+    <h1>TCG Cookies</h1>
+    <h3>A Cookie Clicker client where cracked save codes are posted and you can play without it being blocked at school or work!</h3>
+</head>
+<body>
+    <a href="game/game.html">Play Now</a>
+    <h4>OR</h4>
+    <a href="save.html">Save Codes</a>
 
-<a href="game/game.html">Play Now</a>
-<h4>OR</h4>
-<a href="save.html">Save Codes</a>
+    <h3>DON'T WORRY IT WILL SAVE AUTOMATICALLY EVERY 60 SECONDS OR YOU CAN MANUAL SAVE AND GET A FILE</h3>
 
-<h3>DON'T WORRY IT WILL SAVE AUTOMATICALLY EVERY 60 SECONDS OR YOU CAN MANUAL SAVE AND GET A FILE</h3>
+</body>
+
+</html>
