--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>TCG Cookies</title>
-    <link rel="icon" type="image/x-icon" href="/favicon.png">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <h1>TCG Cookies</h1>
     <h3>A Cookie Clicker client where cracked save codes are posted and you can play without it being blocked at school or work!</h3>
 </head>
