--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
     <h3>DON'T WORRY IT WILL SAVE AUTOMATICALLY EVERY 60 SECONDS OR YOU CAN MANUAL SAVE AND GET A FILE</h3>
     <a href="youtube.com/@th3c4tg4m3r">Made By TH3C@g4M3r</a>
 
+    <button onclick="openGame()">Open in about blank</button>
+    <script>
+        function openGame() {
+            var win = window.open()
+            var url = "https://th3c4tg4m3r.github.io/TCG-Cookies/"
+            var iframe = win.document.createElement('iframe')
+            iframe.style.width = "100%";
+            iframe.style.height = "100%";
+            iframe.style.border = "none";
+            iframe.src = url
+            win.document.body.appendChild(iframe)
+        }
+    </script>
+
 </body>
 
 </html>
