--- a/save.html
+++ b/save.html
@@ -1,5 +1,5 @@
 <h2>Save Codes!</h2>
 
-<h5>None RN</h5>
+<h4>None RN (if you have a savecode you think i should add, email me at th3c4tg4m3r@gmail.com)</h4>
 
 <a href="index.html">Back</a>
