--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <h1>TCG Cookies</h1>
     <h3>A Cookie Clicker client where cracked save codes are posted and you can play without it being blocked at school or work!</h3>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <a href="game/game.html">Play Now</a>
