--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <a href="save.html">Save Codes</a>
 
     <h3>DON'T WORRY IT WILL SAVE AUTOMATICALLY EVERY 60 SECONDS OR YOU CAN MANUAL SAVE AND GET A FILE</h3>
-    <a href="youtube.com/@th3c4tg4m3r">Made By TH3C@g4M3r</a>
+    <p>Made By <a href="https://www.youtube.com/@th3c4tg4m3r/">TH3C@g4M3r</a>.</p>
 
 </body>
     <h2></h2>
