added better button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 </body>
     <h2></h2>
-    <button onclick="openGame()">Open in about blank</button>
+    <button class="button-9" role="button" onclick="openGame()">Open in about blank</button>
     <script>
         function openGame() {
             var win = window.open()
