--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <link rel="stylesheet" href="style.css"?
     <a href="game/game.html">Play Now</a>
     <h4>OR</h4>
     <a href="save.html">Save Codes</a>
