--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--Page Title-->
     <title>TCG Cookies</title>
+    <!--Attempted Favicon-->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <!--Title On Page-->
     <h1>TCG Cookies</h1>
+    <!--Description on page-->
     <h3>A Cookie Clicker client where cracked save codes are posted and you can play without it being blocked at school or work!</h3>
-    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <link rel="stylesheet" href="style.css"?>
     <a href="game/game.html">Play Now</a>
