made css active

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--Link CSS-->
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <!--Page Title-->
     <title>TCG Cookies</title>
     <!--Attempted Favicon-->
