--- a/game/game.html
+++ b/game/game.html
@@ -4,7 +4,7 @@
     <!-- external -->
     <script type="text/javascript">
       window.cookieconsent_options = {
-        message: "Unsurprisingly, this website uses cookies for ads and traffic analysis.",
+        message: "Unsurprisingly, this website uses cookies for ads and traffic analysis. TCG COOKIES CLIENT",
         dismiss: "Got it!",
         learnMore: "Learn more",
         link: "//orteil.dashnet.org/cookieconsentpolicy.html",
