WHY WONT THE CSS SHOW?????

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <!--Link CSS-->
-    <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="stylesheet" href="/style.css">
     <!--Page Title-->
     <title>TCG Cookies</title>
     <!--Attempted Favicon-->
