--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+    <!--css again-->
+    <link rel="stylesheet" href="/style.css"
     <!--Game Text/link-->
     <a href="game/game.html">Play Now</a>
     <h4>OR</h4>
