added some css that hopefully works (from my other repo)

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <!--Attempted Favicon-->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <!--Title On Page-->
-    <h1>TCG Cookies</h1>
+    <h1 class="centered-text">TCG Cookies</h1>
     <!--Description on page-->
-    <h3>A Cookie Clicker client where cracked save codes are posted and you can play without it being blocked at school or work!</h3>
+    <h3 class="centered-text">A Cookie Clicker client where cracked save codes are posted and you can play without it being blocked at school or work!</h3>
 </head>
 
 <body>
@@ -22,13 +22,13 @@
     <!--Save Text/link-->
     <a href="save.html">Save Codes</a>
     <!--Save Reasurrance-->
-    <h3>DON'T WORRY IT WILL SAVE AUTOMATICALLY EVERY 60 SECONDS OR YOU CAN MANUAL SAVE AND GET A FILE</h3>
+    <h3 class="centered-text">DON'T WORRY IT WILL SAVE AUTOMATICALLY EVERY 60 SECONDS OR YOU CAN MANUAL SAVE AND GET A FILE</h3>
     <!--Me Link-->
     <p>Made By <a href="https://www.youtube.com/@th3c4tg4m3r/">TH3C@g4M3r</a> (click)</p>
 </body>
     <!--About Blank Button-->    
     <h2></h2>
-        <button class="glow-button" onclick="openGame()">Open in about blank</button>
+        <button class="button-17" onclick="openGame()">Open in about blank</button>
         <script>
             function openGame() {
                 var win = window.open()
