got rid of cool button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </body>
     <!--About Blank Button-->    
     <h2></h2>
-        <button class="button-17" onclick="openGame()">Open in about blank</button>
+        <button class="glow-button" onclick="openGame()">Open in about blank</button>
         <script>
             function openGame() {
                 var win = window.open()
