--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <h3 class="centered-text">DON'T WORRY IT WILL SAVE AUTOMATICALLY EVERY 60 SECONDS OR YOU CAN MANUAL SAVE AND GET A FILE</h3>
     <!--Me Link-->
     <p>Made By <a href="https://www.youtube.com/@th3c4tg4m3r/">TH3C@g4M3r</a> (click)</p>
+    <h4>I know this looks bad, the css won't work. Help would be appreciated!</h4>
 </body>
     <!--About Blank Button-->    
     <h2></h2>
